@startuml
[*]-->Off
Off: Нагрузка выключена
Off-->WaitStableGround: ШО И ОБ>=ВЫСОКИЕ(ЗЕМЛЯ)
Off-->On: НЕ ШО И ОБ>=ВЫСОКИЕ(ВОЗДУХ)
WaitStableGround: Задержка включения на земле
WaitStableGround-->On: !ШО И ОБ>=ВЫСОКИЕ(ВОЗДУХ)
WaitStableGround-->Off: ОБ<ВЫСОКИЕ(ЗЕМЛЯ)
WaitStableGround-->On: ОБ>=ВЫСОКИЕ(ВОЗДУХ) И t>=30с
On: Нагрузка включена
On-->WaitOffAir: НЕ ШО И ОБ>=НИЗКИЕ И ОБ<СТАБИЛЬНЫЕ
On-->Off: ОБ<НИЗКИЕ
WaitOffAir: Задержка выключения в воздухе
WaitOffAir-->On: ОБ>=СТАБИЛЬНЫЕ ИЛИ ШО
WaitOffAir-->Off: ОБ<НИЗКИЕ ИЛИ Т>=5000


legend
  Условия:
   - ОБ - Усреднённая частота оборотов (freq)
   - ШО - Комплексный признак ШО (wow)
   - t -  Время со старта блока
   - ВЫСОКИЕ(ВОЗДУХ) = 2400 обороты для включения в воздухе
   - ВЫСОКИЕ(ЗЕМЛЯ) = 2200 обороты для включения в воздухе
   - НИЗКИЕ = 1000 обороты для выключения
   - СТАБИЛЬНЫЕ(воздух) = 2300 обороты для контроля стабильности
endlegend
@enduml

                        